# tdxview

./: .coverage  .gitignore  Dockerfile  README.md  clean_history.sh  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.trae/: GITHUB_ISSUE_TDXVIEW.md  PROJECT_RULES_SUMMARY.md  setup_git.sh  verify_rules.sh
.trae/rules/: project_rules.md
app/: main.py
app/components/: auth.py  charts.py  config.py  dashboard.py  data_management.py  indicators.py
app/config/: settings.py
app/data/: cache.py  database.py  parquet_manager.py
app/data/models/: data_source.py  indicator.py  user.py
app/data/sources/: base_source.py  tdxdata_source.py
app/services/: backup_service.py  data_service.py  indicator_service.py  plugin_service.py  retention_service.py  user_service.py  visualization_service.py
app/utils/: logging.py
app/utils/indicators/: __init__.py  custom.py  momentum.py  trend.py  volatility.py  volume.py
docs/: DESIGN_REVIEW_REPORT.md  PRD_TDXVIEW_VISUALIZATION.md  SYSTEM_DESIGN_TDXVIEW.md  TEST_REPORT.md
plans/: tdxview-implementation.md
scripts/: init_database.py  setup_dev.sh
tests/: __init__.py  conftest.py
tests/e2e/: conftest.py  test_auth.py  test_charts.py  test_dashboard.py  test_data_management.py  test_indicators.py  test_navigation.py
tests/e2e/pages/: __init__.py  base_page.py  charts_page.py  config_page.py  dashboard_page.py  data_management_page.py  indicators_page.py  login_page.py
tests/integration/: conftest.py  test_api_integration.py  test_data_flow.py  test_end_to_end.py  test_live_tdx.py  test_simple_integration.py
tests/unit/: test_backup_service.py  test_custom_indicators_extra.py  test_dashboard_config.py  test_data_layer.py  test_data_service.py  test_indicator_service.py  test_indicators.py  test_phase6.py  test_plugin_service.py  test_project_structure.py  test_retention_service.py  test_user_service.py  test_visualization.py
