[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tdxview"
version = "1.0.0"
description = "Data visualization platform based on tdxdata"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    "streamlit>=1.28.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "duckdb>=0.9.0",
    "pyarrow>=14.0.0",
    "plotly>=5.18.0",
    "kaleido>=0.2.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "loguru>=0.7.0",
    "cryptography>=41.0.0",
    "bcrypt>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.85.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "factory-boy>=3.3.0",
    "responses>=0.24.0",
    "freezegun>=1.2.0",
]
analysis = [
    "ta-lib>=0.4.26",
    "vectorbt>=0.25.0",
    "numba>=0.58.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "live: marks tests requiring live network",
    "local: marks tests requiring local TDX files",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "app/components/*",
    "app/data/sources/tdxdata_source.py",
    "app/main.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.setuptools.packages.find]
include = ["app*", "plugins*"]
exclude = ["external*", "tests*", "docs*", "scripts*", "log*", "plans*"]
